Code cleanup.  Been playing with a few different static code analysis tools.  Used them to recommend the changes made in this commit.